// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating base types with modifiers Base type: 0, iteration: 0 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 2 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 4 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 6 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 8 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 0, iteration: 9 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 1, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 1, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69777,
    "My String",
    8,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 1, iteration: 2 1`] = `null`;

exports[`Generating base types with modifiers Base type: 1, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    96408,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 1, iteration: 4 1`] = `null`;

exports[`Generating base types with modifiers Base type: 1, iteration: 5 1`] = `null`;

exports[`Generating base types with modifiers Base type: 1, iteration: 6 1`] = `null`;

exports[`Generating base types with modifiers Base type: 1, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    93150,
    "My String",
    3,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 1, iteration: 8 1`] = `null`;

exports[`Generating base types with modifiers Base type: 1, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 1 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 2 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 3 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 4 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 5 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      12966,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      10955,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      14224,
      "My String",
      4,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 2, iteration: 6 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 7 1`] = `null`;

exports[`Generating base types with modifiers Base type: 2, iteration: 8 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      75324,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      93422,
      "My String",
      4,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 2, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 1 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      12814,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      8740,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      11547,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      74772,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      38304,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      58004,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      4999,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      43202,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      50193,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      80600,
      "My String",
      8,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 3, iteration: 2 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 3 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 4 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 5 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 6 1`] = `null`;

exports[`Generating base types with modifiers Base type: 3, iteration: 7 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      89094,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      47673,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      17352,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71110,
      "My String",
      6,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 3, iteration: 8 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      63298,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      3083,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 3, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 1 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 2 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 3 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 4 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      75324,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      93422,
      "My String",
      4,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 4, iteration: 5 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 6 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      63298,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      3083,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 4, iteration: 7 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 8 1`] = `null`;

exports[`Generating base types with modifiers Base type: 4, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 1 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 2 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    36274,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 5, iteration: 3 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 4 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 5 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 6 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    68488,
    "My String",
    5,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 5, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    20228,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 5, iteration: 8 1`] = `null`;

exports[`Generating base types with modifiers Base type: 5, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 1 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 2 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 3 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 4 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    19223,
    "My String",
    6,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 6, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    68488,
    "My String",
    5,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 6, iteration: 6 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 7 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 8 1`] = `null`;

exports[`Generating base types with modifiers Base type: 6, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 7, iteration: 0 1`] = `null`;

exports[`Generating base types with modifiers Base type: 7, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    93150,
    "My String",
    3,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 7, iteration: 2 1`] = `null`;

exports[`Generating base types with modifiers Base type: 7, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    38437,
    "My String",
    9,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 7, iteration: 4 1`] = `null`;

exports[`Generating base types with modifiers Base type: 7, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    20228,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 7, iteration: 6 1`] = `null`;

exports[`Generating base types with modifiers Base type: 7, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    12190,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 7, iteration: 8 1`] = `null`;

exports[`Generating base types with modifiers Base type: 7, iteration: 9 1`] = `null`;

exports[`Generating base types with modifiers Base type: 8, iteration: 0 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    65015,
    "My String",
    8,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 2 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    49096,
    "My String",
    2,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    36669,
    "My String",
    2,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 4 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    65232,
    "My String",
    3,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    68896,
    "My String",
    3,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 6 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    65774,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    95045,
    "My String",
    9,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 8 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    42004,
    "My String",
    6,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 8, iteration: 9 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    88732,
    "My String",
    8,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 0 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71295,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      42847,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      69088,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71915,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49111,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      78002,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      41092,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 1 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      8226,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      44259,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      60523,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      31964,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      98154,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      32905,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      806,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      92339,
      "My String",
      9,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 2 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      35617,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      27944,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49115,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      87101,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      55353,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      79775,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      41286,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      83931,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      84260,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      57367,
      "My String",
      0,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 3 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      93181,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      58039,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      43902,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      34908,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      55680,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      64561,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      32748,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      63181,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      88295,
      "My String",
      8,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 4 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      21812,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      24845,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      17502,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      81293,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      2876,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      64218,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      82679,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      57319,
      "My String",
      8,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 5 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      9258,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      7357,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      65241,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      17499,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      15320,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      29475,
      "My String",
      8,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 6 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      78708,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      17269,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      54762,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      65583,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      58908,
      "My String",
      6,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 7 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      5093,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      20068,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      20009,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      1069,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      19447,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 8 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      74977,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      15882,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      50632,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      42768,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      87895,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      13405,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      9006,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      68224,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      39201,
      "My String",
      1,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 9, iteration: 9 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      65533,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      80821,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      60817,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      92298,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      32287,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      62041,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      13795,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      40886,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      9873,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49849,
      "My String",
      2,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 0 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71295,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      42847,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      69088,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71915,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49111,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      78002,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      41092,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 1 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      36274,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      94372,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      93283,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      38963,
      "My String",
      4,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 2 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      77347,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      91597,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      83851,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      27230,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      33946,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      51251,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      45463,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      68742,
      "My String",
      2,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 3 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      68488,
      "My String",
      5,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 4 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      27351,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      17621,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      1391,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      86501,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      27298,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      66285,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      66774,
      "My String",
      6,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 5 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      2455,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 6 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      70420,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      26673,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      13845,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      56546,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      57350,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      6205,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      86488,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      22374,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      7899,
      "My String",
      8,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 7 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      28466,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      33008,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      59824,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      70315,
      "My String",
      9,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 8 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      66722,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71589,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      7903,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      97236,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      85877,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      68844,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      19462,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      53468,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      77322,
      "My String",
      8,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 10, iteration: 9 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      58372,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      53254,
      "My String",
      10,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 0 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71295,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      42847,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      69088,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71915,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49111,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      78002,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      41092,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 1 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      21409,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      62301,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71830,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      19521,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49754,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      74305,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      87476,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      58599,
      "My String",
      1,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 2 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      14449,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      8872,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      79487,
      "My String",
      0,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 3 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      90116,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      41917,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      11943,
      "My String",
      2,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 4 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      76910,
      "My String",
      1,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      11006,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      38024,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      96103,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      57017,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      96627,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      40554,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      39047,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      22181,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 5 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      14941,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      24014,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      47562,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      52133,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      86078,
      "My String",
      10,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 6 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      22672,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      64218,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      93254,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      87938,
      "My String",
      6,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 7 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      49414,
      "My String",
      2,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      14855,
      "My String",
      6,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      25760,
      "My String",
      4,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      57393,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      82162,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      11615,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      43578,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      72702,
      "My String",
      5,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      65220,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      96747,
      "My String",
      9,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 8 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      13110,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      56255,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      92206,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      91814,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      56421,
      "My String",
      3,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      95455,
      "My String",
      10,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      71565,
      "My String",
      8,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      17431,
      "My String",
      7,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 11, iteration: 9 1`] = `
Array [
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      21243,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      54128,
      "My String",
      9,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      89646,
      "My String",
      7,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      73732,
      "My String",
      0,
    ],
  ],
  Array [
    1,
    2,
    34,
    7,
    9,
    Array [
      67925,
      "My String",
      1,
    ],
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 0 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    66132,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 2 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    36669,
    "My String",
    2,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    78884,
    "My String",
    2,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 4 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    65774,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    82335,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 6 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    88732,
    "My String",
    8,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    50296,
    "My String",
    9,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 8 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    1349,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 12, iteration: 9 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    78149,
    "My String",
    6,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 0 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    15321,
    "My String",
    10,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 2 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    88130,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    32100,
    "My String",
    8,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 4 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    80208,
    "My String",
    4,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    51197,
    "My String",
    6,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 6 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    11390,
    "My String",
    5,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    4824,
    "My String",
    9,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 8 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    12747,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 13, iteration: 9 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    29350,
    "My String",
    10,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 0 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    69646,
    "My String",
    7,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 1 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    94385,
    "My String",
    5,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 2 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    76979,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 3 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    82622,
    "My String",
    10,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 4 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    95045,
    "My String",
    9,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 5 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    40198,
    "My String",
    3,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 6 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    50296,
    "My String",
    9,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 7 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    54657,
    "My String",
    1,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 8 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    93058,
    "My String",
    10,
  ],
]
`;

exports[`Generating base types with modifiers Base type: 14, iteration: 9 1`] = `
Array [
  1,
  2,
  34,
  7,
  9,
  Array [
    51693,
    "My String",
    0,
  ],
]
`;
